--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,7 +5,7 @@
     align-items: center;
     color: #fff;
     padding-top: 36.25px;
-    font-family: "Inter", Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     margin: auto;
 }
 
@@ -25,14 +25,14 @@
 
 .profile__info-name {
     font-weight: 500;
-    font-size: 42px;
-    line-height: 1.14;
+    font-size: 41px;
+    line-height: 48px;
     margin-bottom: 16px;
     margin-top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    text-align: center;
+    text-align: center; 
 }
 
 .profile__info-description {
