--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,7 +12,7 @@
 }
 
 .card__bottom {
-    padding: 25px 15px 31px 21px;
+    padding: 25px 15px 25px 21px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -27,6 +27,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    font-weight: 900;
+    font-size: 24px;
 }
 
 .card__bottom-button {
