--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,7 +4,7 @@
     justify-content: flex-start;
     align-items: center;
     color: #fff;
-    padding-top: 36.25px;
+    padding-top: 40px;
     font-family: 'Inter', Arial, sans-serif;
     margin: auto;
 }
@@ -18,7 +18,7 @@
     margin: 0 29px 0 0;
 }
 .profile__info {
-    width: 415px;
+    max-width: 415px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -27,7 +27,7 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
-    margin-bottom: 16px;
+    margin-bottom: 8px;
     margin-top: 0;
     display: flex;
     justify-content: space-between;
@@ -78,7 +78,7 @@
 
 @media screen and (max-width: 900px) {
     .profile__info {
-        width: 330px;
+        max-width: 330px;
     }
 
     .profile__info-name {
@@ -95,7 +95,7 @@
         width: 282px;
         flex-direction: column;
         justify-content: space-between;
-        padding: 38.25px 0 36px;
+        padding: 42px 0 36px;
     }
 
     .profile__avatar {
@@ -106,7 +106,7 @@
         width: 100%;
         flex-direction: column;
         align-items: center;
-        margin: 26.25px 0 36px;
+        margin: 30px 0 36px;
     }
 
     .profile__info-name {
@@ -116,7 +116,6 @@
         justify-content: center;
         width: 100%;
         margin-bottom: 14px;
-        position: relative;
     }
 
     .profile__info-description {
@@ -126,11 +125,10 @@
     }
 
     .profile__info-button {
+        margin-left: 10px;
         height: 18px;
         width: 18px;
         background-size: 7.5px 7.5px;
-        position: absolute;
-        right: 0;
     }
 
     .profile__add {
