--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,32 +17,42 @@
     object-fit: cover;
     margin: 0 29px 0 0;
 }
+
 .profile__info {
     max-width: 415px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto 24px;
+    grid-template-rows: 39px 22px;
+    grid-template-areas:
+        "name edit"
+        "description edit";
+    row-gap: 16px;
+    column-gap: 18px;
 }
 
 .profile__info-name {
+    max-width: 373px;
     font-weight: 500;
     font-size: 42px;
-    line-height: 48px;
-    margin-bottom: 8px;
-    margin-top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center; 
+    line-height: 1.143;
+    margin: 0;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+    grid-area: name;
 }
 
 .profile__info-description {
+    max-width: 415px;
     line-height: 1.22;
     font-weight: 400;
     font-size: 18px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    grid-area: description;
 }
 
-.profile__info-button {
+.profile__edit {
     background-image: url('../images/edit-button-default.svg');
     background-size: 10px 10px;
     height: 24px;
@@ -50,12 +60,15 @@
     padding: 0;
     background-position: center;
     background-repeat: no-repeat;
-    margin-left: 18px;
+    margin-top: 15px;
     background-color: #000;
     border: solid 1px #fff;
+    box-sizing: border-box;
+    vertical-align: middle;
+    grid-area: edit;
 }
 
-.profile__info-button:hover {
+.profile__edit:hover {
     opacity: 0.6;
 }
 
@@ -79,6 +92,7 @@
 @media screen and (max-width: 900px) {
     .profile__info {
         max-width: 330px;
+        row-gap: 15px;
     }
 
     .profile__info-name {
@@ -87,6 +101,10 @@
 
     .profile__info-description {
         font-size: 15px;
+    }
+
+    .profile__edit {
+        margin-top: 5px;
     }
 }
 
@@ -104,28 +122,32 @@
     
     .profile__info {
         width: 100%;
-        flex-direction: column;
-        align-items: center;
         margin: 30px 0 36px;
+        grid-template-columns: auto 18px;
+        grid-template-rows: 22px 15px;
+        grid-template-areas:
+            "name edit"
+            "description description";
+        column-gap: 10px;
+        row-gap: 14px;
     }
 
     .profile__info-name {
         font-size: 22px;
         line-height: 1.21;
         text-align: center;
-        justify-content: center;
-        width: 100%;
-        margin-bottom: 14px;
+        max-width: 196px;
+        margin-left: 43px;
     }
 
     .profile__info-description {
         font-size: 14px;
         line-height: 1.21;
         text-align: center;
+        margin: auto;
     }
 
-    .profile__info-button {
-        margin-left: 10px;
+    .profile__edit {
         height: 18px;
         width: 18px;
         background-size: 7.5px 7.5px;
