--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,4 @@
 .header {
-    min-height: 120px;
     display: flex;
     align-items: center;
     flex-shrink: 0;
@@ -23,12 +22,11 @@
     width: 173px;
     height: 33px;
     object-fit: contain;
+    margin: 45px 0 41px; 
 }
 
 @media screen and (max-width: 700px) {
     .header {
-        min-height: 56px;
-        margin-top: 28px;
         padding-left: 27px;
         align-items: stretch;
     }
@@ -36,5 +34,6 @@
     .header__logo {
         width: 126px;
         height: 24px;
+        margin: 28px 0 32px;
     }
 }
