--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,5 +1,5 @@
 .modal {
-    display: none;
+    display: flex;
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -8,10 +8,16 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    z-index: 2;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s linear;
 }
 
 .modal_opened {
-    display: flex;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0.3s, opacity 0.3s linear;
 }
 
 .modal__container {
@@ -47,6 +53,54 @@
     cursor: pointer;
 }
 
+.modal__picture {
+    display: flex;
+    margin: auto;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 75vw;
+}
+
+.modal__picture-image {
+    object-fit: contain;
+    padding: 0;
+    max-height: 75vh;
+    max-width: 75vw;
+}
+
+.modal__picture-text {
+    padding-top: 10px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    margin: 0;
+    color: #fff;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 100%;
+}
+
+.modal__picture-exit {
+    border: none;
+    background-image: url(../images/close_icon.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.0);
+    padding: 0;
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    top: -40px;
+    right: -40px;
+}
+
+.modal__picture-exit:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
 .modal__container-title {
     font-weight: 900;
     font-size: 24px;
@@ -75,5 +129,12 @@
         height: 26px;
         width: 26px;
         right: 0;
+    }
+
+    .modal__picture-exit {
+        height: 26px;
+        width: 26px;
+        right: 0;
+        max-width: 75vw;
     }
 }
