--- a/blocks/form.css
+++ b/blocks/form.css
@@ -22,7 +22,27 @@
     line-height: 17px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.form__input:first-of-type {
+    margin-top: 0px;
+}  
+
+.form__input-error {
+    font-size: 12px;
+    line-height: 15px;
+    color: #FF0000;
+    visibility: hidden;
+}
+
+.form__input-error_active {
+    visibility: visible;
+}
+
+.form__input_type_error {
+    border-bottom: 1px solid #FF0000;
+    margin-bottom: 5px;
 }
 
 .form__save {
@@ -36,10 +56,17 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 43px;
 }
 
-.form__save:hover {
+.form__save_disabled {
+    background-color: #FFF;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    opacity: 0.2;
+    color: rgba(0, 0, 0, 0.2);
+}
+
+.form__save:hover:enabled {
     opacity: 0.8;
     cursor: pointer;
 }
