--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
-@import url("../vendor/normalize.css");
-@import url("../vendor/inter.css");
+@import url("../fonts/normalize.css");
+@import url("../fonts/inter.css");
 @import url("../blocks/page.css");
 @import url("../blocks/elements.css");
 @import url("../blocks/footer.css");
