fix multiple errors according to code review. Change file structure to be in line with project checklist

--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -23,12 +23,17 @@
 
 .card__delete:hover {
     opacity: 0.6;
+    cursor: pointer;
 }
 
 .card__image {
     object-fit: cover;
     width: 282px;
     height: 282px;
+}
+
+.card__image {
+    cursor: pointer;
 }
 
 .card__bottom {
